# pydreamplet-showcase

./: .gitignore  README.md  dancing_circles.py  polar_noise.py  pyproject.toml  template.py
data/supplier_performance/: suppliers.json
scripts/: alice_word_cloud.py  dancing_circles.py  polar_noise.py  soap_bubble.py  supplier_performance.py  template.py
scripts/alice_word_cloud/: main.py
scripts/alice_word_cloud/data/: word_counts.json
scripts/combo_chart/: data_reader.py  main.py
scripts/combo_chart/data/: amazon.csv  apple.csv  microsoft.csv  nvidia.csv  tesla.csv
scripts/dancing_circles/: main.py
scripts/line_chart/: main.py
scripts/polar_noise/: main.py
scripts/soap_bubble/: main.py
scripts/supplier_performance/: data_reader.py  main.py
scripts/template/: main.py
tools/: cli.py  runtime.py  theme.py
tools/motives/: dark.json  light.json
