[project]
name = "pydreamplet-showcase"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "pydreamplet>=2.1.0",
    "typer>=0.26.7",
]

[project.scripts]
dp = "tools.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]


[dependency-groups]
dev = [
    "ruff>=0.15.16",
]
